--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <h2><a href="http://54.168.227.168/day2.html" target="_blank" rel="noopener">Day2</a></h2>
     <h2><a href="http://54.168.227.168/day3.html" target="_blank" rel="noopener">Day3</a></h2>
     <h2><a href="http://54.168.227.168/tasks" target="_blank" rel="noopener">Day4,5</a></h2>
+
+    <p>ソースコード https://github.com/NaokiNakamichi/ntt_tasks_rails</p>
     
 
 
